nvim: Add ElixirLS config to coc-settings.json

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -10,6 +10,7 @@
       }
     }
   },
+  "elixirLS.dialyzerEnabled": false,
   "codeLens.enable": true,
   "tsserver.enableJavascript": true,
   "css.filetypes": ["css", "styl"]
